# personal_assistant

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  PROGRESS.md  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci-cd.yml
alembic/: env.py  script.py.mako
alembic/versions/: 20260128_001_create_security_digest_tables.py  20260129_002_add_article_published_at.py  20260203_003_create_settings_table.py  20260212_004_create_job_runs_table.py
config/: README.md  admin.example.yaml  llm.example.yaml  storage.example.yaml  telegram.example.yaml  telegram.yaml  workers.example.yaml
config/my_profile/: facts.example.yaml  story.example.yaml
config/sources/: security_news.example.yaml
deploy/: deploy.sh  pa-fetcher.target  pa-fetcher@.service  pa-worker.service
docs/: changelog.md
docs/decisions/: 001-storage-layer-design.md  002-ci-cd-workflow.md  003-llm-config-redesign.md  004-security-digest-data-model.md  005-admin-web-ui.md  006-content-fetcher.md  007-background-worker.md  008-due-source-selection.md  009-article-upsert.md  010-admin-settings.md  011-llm-summarizer.md  012-digest-generator.md  013-digest-telegram-notification.md  014-browser-fetcher.md  015-deploy-script.md  016-workers-config-loading.md  017-job-run-logging.md  018-ops-transparency-job-runs-admin.md  019-daily-digest-scheduler.md  020-missinggreenlet-bool-check.md
interfaces/telegram_bot/: __init__.py  bot.py
src/admin/: __init__.py  app.py  auth.py  templates_config.py
src/admin/routes/: __init__.py  auth.py  categories.py  dashboard.py  digests.py  operations.py  settings.py  sources.py
src/admin/templates/: base.html  dashboard.html  login.html  operations.html
src/admin/templates/categories/: _row.html  form.html  list.html
src/admin/templates/digests/: _result.html
src/admin/templates/settings/: _setting_row.html  list.html
src/admin/templates/sources/: _row.html  form.html  list.html
src/api/: main.py
src/core/config/: __init__.py  loader.py
src/core/llm/: __init__.py  base.py  router.py  test_connection.py
src/core/llm/providers/: __init__.py  litellm_provider.py
src/core/models/: __init__.py  job_runs.py  security_digest.py  settings.py
src/core/primitives/: __init__.py  fetcher.py
src/core/primitives/fetchers/: __init__.py  base.py  browser.py  manager.py  reddit.py  test_fetch.py  twitter.py  website.py
src/core/services/: __init__.py  digest.py  job_runs.py  notifier.py  settings.py  summarizer.py
src/core/services/templates/: digest.html
src/core/storage/: __init__.py  base.py  exceptions.py  file_storage.py  postgres.py  redis_cache.py  vector_store.py
src/core/utils/: __init__.py  time.py
src/orchestrator/: __init__.py  orchestrator.py
src/workers/: __init__.py  daily_digest_worker.py  security_digest_worker.py  worker_manager.py
tests/admin/: __init__.py  test_auth.py  test_routes.py
tests/core/config/: test_loader.py
tests/core/llm/: test_router.py
tests/core/models/: test_security_digest.py
tests/core/primitives/: __init__.py
tests/core/services/: conftest.py  test_digest.py  test_job_runs.py  test_notifier.py  test_settings.py  test_summarizer.py
tests/core/storage/: conftest.py  test_file_storage.py  test_postgres.py  test_redis_cache.py  test_vector_store.py
tests/workers/: __init__.py  test_daily_digest_worker.py  test_security_digest_worker.py
(+5 files in other folders)
